feat: Implement AI script analysis and UI improvements
Integrates Gemini API for script analysis and enhances user experience.
Introduces a persistent API key input and storage mechanism.
Updates UI with a new background color and improves chart component loading.
Refactors Gemini service to accept API key as a parameter, improving security and flexibility.
Adds error handling for API key validation in the Gemini service.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #FEFCE8; /* Yellow Background */
+            background-color: #ECFDF5; /* Green Background */
             color: #333333; /* Charcoal */
         }
         .chart-container {
